Use new release of nsmenufx (3.0.2)